Update 'backend-tests-dotnet-basic-mwfaprbq' component image to: quay.io/rhtap_qe/backend-tests-dotnet-basic-mwfaprbq:github-2663f54c3c2c5482312d3f477552b317e225d968

--- a/components/backend-tests-dotnet-basic-mwfaprbq/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-dotnet-basic-mwfaprbq/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-dotnet-basic-mwfaprbq
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-dotnet-basic-mwfaprbq:github-2663f54c3c2c5482312d3f477552b317e225d968
+          name: container-image
